# uber

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  log_util.rs  main.rs
src/errors/: errors.rs  mod.rs
src/models/: mod.rs
src/models/auth/: auth.rs
src/models/cancel_delivery/: cancel_delivery.rs  mod.rs
src/models/create_delivery/: create_delivery.rs  mod.rs
src/models/create_quote/: create_quote.rs  mod.rs
src/models/general/: general.rs
src/models/get_delivery/: get_delivery.rs  mod.rs
src/models/list_deliveries/: list_deliveries.rs  mod.rs
src/models/menu/: mod.rs
src/models/menu/update/: mod.rs  update_menu_item.rs
src/models/menu/upload/: mod.rs  upload_menu.rs
src/models/order/: mod.rs
src/models/order/accept/: accept_order.rs  mod.rs
src/models/order/cancel/: cancel_order.rs  mod.rs
src/models/order/get/: get_order_details.rs  mod.rs
src/models/order/update/: mod.rs  update_order.rs
src/models/pod_retrieval/: mod.rs  pod_retrieval.rs
src/models/update_delivery/: mod.rs  update_delivery.rs
src/models/webhooks/: mod.rs  webhooks.rs
tests/unit/: cancel_delivery_test.rs  create_delivery_test.rs  mod.rs
