[package]
name = "uber_api"
version = "0.1.6"
authors = ["robinjonker"]
edition = "2021"
description = "A library coded in Rust and hosted on crates.io for Uber's API. In particular, Uber Direct with their DaaS API."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
anyhow = "1"

reqwest = { version = "0.11", features = ["json"] }
serde_derive = "1.0.152"
chrono = "0.4.23"
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
serde_ignored = "0.1"
serde_urlencoded = "0.7"

tokio               = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "parking_lot"] }
clap                = { version="3", features=["derive",  "suggestions", "color"]}

